feat(mw): register user types and authorize
