# assets/swagger/swagger.yml
@@ -13,6 +13,13 @@ consumes:
 produces:
   - application/json
 
+securityDefinitions:
+  authorization_header:
+    description: Аутентификационный токен. Формат "Bearer токен"
+    type: apiKey
+    name: Authorization
+    in: header
+
 definitions:
   Token:
     properties:
@@ -242,11 +249,20 @@ paths:
             items:
               $ref: "#/definitions/BusNoID"
             example: [{ city: Москва, num: "11" }, { city: Москва, num: "15" }]
+      security:
+      - authorization_header: []
+      description: |
+        Для пользователей с типом:
+        `admin`
       responses:
         "201":
           description: Created
         "400":
           description: Bad request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
         "500":
           description: Internal server error
 
